syntax = "proto3";

package erponomics.manufacturing.v1;

import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";

message Item {
  option (google.api.resource) = {
    type: "manufacturing.erponomics.com/Item"
    pattern: "items/{item}"
    singular: "item"
    plural: "items"
  };

  string name = 1 [(google.api.field_behavior) = IDENTIFIER];
  string id = 2 [(google.api.field_behavior) = OPTIONAL];
  string code = 3 [(google.api.field_behavior) = REQUIRED];
  string display_name = 4 [(google.api.field_behavior) = REQUIRED];
  string description = 5 [(google.api.field_behavior) = REQUIRED];
  string etag = 90 [(google.api.field_behavior) = OPTIONAL];
  google.protobuf.Timestamp create_time = 91 [
    (google.api.field_behavior) = OUTPUT_ONLY
    ];
  google.protobuf.Timestamp update_time = 92 [
    (google.api.field_behavior) = OUTPUT_ONLY
    ];
}
